--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="detail">
-        <span class="tag">90后</span>
+        <span class="tag">饥人谷</span>
         <h1>It's a new day</h1>
         <ul class="icons">
           <li><span class="iconfont icon-earphone"></span>3333</li>
@@ -34,11 +34,11 @@
           <div class="bar">
             <div class="bar-progress"></div>
           </div>
-          <div class="current-time">1:02</div>
+          <div class="current-time">0:00</div>
         </div>
-        <div class="author">周杰伦</div>
+        <div class="author">若愚</div>
         <div class="lyric">
-          <p>hello  world</p>
+          <p></p>
         </div>
       </div>
     </main>
